Closed Bug 1192248 Opened 10 years ago Closed 10 years ago

Fix wchar_t/char16_t mismatch WinIMEHandler.cpp.

Categories

(Core :: Widget: Win32, defect)

Unspecified
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: jacek, Assigned: jacek)

References

Details

Attachments

(1 file)

Attached patch fixSplinter Review
Recent changes broke compilation on compilers where wchar_t != char16_t like GCC and VS2015. The attached patch also fixes compilation on case sensitive OSes, unused variable warning and unrelated non-virtual destructor warning.
Attachment #8644959 - Flags: review?(masayuki)
Comment on attachment 8644959 [details] [diff] [review] fix >-class InkCollectorEvent : public _IInkCollectorEvents >+class InkCollectorEvent final : public _IInkCollectorEvents I don't understand why this is necessary. Please remove this change if this is not necessary for this bug. >@@ -740,36 +740,36 @@ IMEHandler::ShowOnScreenKeyboard() > } else { > PWSTR path = nullptr; > HRESULT hres = > WinUtils::SHGetKnownFolderPath(FOLDERID_ProgramFilesCommon, 0, > nullptr, &path); > if (FAILED(hres) || !path) { > return; > } >- commonProgramFilesPath = nsDependentString(path).get(); >+ commonProgramFilesPath = static_cast<const wchar_t*>(nsDependentString(path).get()); I *guess* this line is over 80 chars. If so, please do: commonProgramFilesPath = static_cast<const wchar_t*>(nsDependentString(path).get());
Attachment #8644959 - Flags: review?(masayuki) → review+
Blocks: VC14
url: https://hg.mozilla.org/integration/mozilla-inbound/rev/b41dbdb8e871cf8528571a16272b05fc6449bc82 changeset: b41dbdb8e871cf8528571a16272b05fc6449bc82 user: Jacek Caban <jacek@codeweavers.com> date: Mon Aug 10 09:24:57 2015 +1000 description: Bug 1192248 - Fix wchar_t/char16_t mismatch WinIMEHandler.cpp. r=masayuki
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: